# fullstack-reason-react-demo

./: .dockerignore  .gitignore  .merlin  Dockerfile  Makefile  README.md  bsconfig.json  bundle.mjs  dune  dune-project  esy.json  fly.toml  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml  deploy.yml
benchmark/: README.md  generate.js
benchmark/bun-js/: index.js
benchmark/node-express-js/: index.js
benchmark/node-express-rescript/: index.js
client/: app.re  client.re  dune  hash.js  hash.re  header.re
esy.lock/: index.json
esy.lock/overrides/feaa64344e452925e6ebbe0a3b417907/: Readme.md  esy.json
esy.lock/overrides/feaa64344e452925e6ebbe0a3b417907/.ci/: steps.sh  verdaccio-config.yaml  yarnrc
esy.lock/overrides/feaa64344e452925e6ebbe0a3b417907/esy-test/: package.json
esy.lock/overrides/opam__s__melange_opam__c__3.0.0_51_opam_override/: package.json
esy.lock/overrides/opam__s__melange_opam__c__3.0.0_51_opam_override/files/: 0001-Fixes-Windows-build-error-Not-a-binary-file.patch  awk.patch
esy.lock/overrides/opam__s__melange_opam__c__4.0.0_51_opam_override/: package.json
esy.lock/overrides/opam__s__melange_opam__c__4.0.0_51_opam_override/files/: awk.patch
esy.lock/overrides/opam__s__ssl_opam__c__0.7.0_opam_override/: package.json
esy.lock/overrides/opam__s__ssl_opam__c__0.7.0_opam_override/files/: no-dynlink.patch
node-js/: Link.js  PageContainer.js  PageWelcome.js  index.js
node-rescript/: index.js  shared.js
patches/: bs-css+15.3.1.patch  bs-css-emotion+4.3.1.patch
reason-react/src/: ReasonReactRouter.re
rr/: dune
rr/src/legacy/: ReasonReact.re
server/: comments.re  dune  server.eml.re  server.re
shared/: Ahrefs.re  App.re  Counter.re  Excerpt.re  ExcerptT.re  Header.re  Link.re  PageAddExcerpt.re  PageAuthorExcerpts.re  PageContainer.re  PageCounter.re  PageExcerpts.re  PageHello.re  PageHelloFallback.re  PageNotFound.re  PageWelcome.re  Root.re  Row.re  Spacer.re  Stack.re  Theme.re  dune  shared.re
shared/js/: dune
shared/native/: dune
shared/native/lib/: Align.re  Counter.re  Row.re  Theme.re
