(library
 (name shared_native)
 (modes best)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.webapi
  server-reason-react.css)
 (preprocess
  (pps melange.ppx server-reason-react.ppx)))

(copy_files# "../*.re")
