(include_subdirs unqualified)

(library
 (name shared_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  styled-ppx.emotion_native)
 (preprocess
  (pps styled-ppx melange.ppx server-reason-react.ppx)))

(copy_files# "../*.re")
